src/pages/Home/index.scss
@import "../../assets/styles/colors.scss";

.home-page {
  .carousel {
    &-wrapper {
      width: 100%;
      background-color: black;
    }

    &-status {
      left: 0;
      bottom: 0;
      top: auto;
      font-size: 16px;
      line-height: 20px;
      width: 268px;
      background-color: black;
      padding: 34px 24px 32px 72px;
    }

    &-arrow {
      &-prev,
      &-next {
        position: absolute;
        border-radius: 0;
        background-color: transparent;
        bottom: 24px;
        z-index: 10;
        left: 130px;
        border-top: none;
      }

      &-next {
        left: 194px;
      }
    }
  }

  .charity {
    &__mint {
      h3 {
        margin-top: 10px;
      }

      & > div {
        display: flex;

        .btn {
          margin-top: 0;
          margin-right: 0;
          margin-left: 20px;
        }
      }
    }

    &__helper-text {
      width: 100%;
    }
  }

  .about {
    background: transparent linear-gradient(233deg, $dark-grey 0%, #000 100%) 0% 0% no-repeat padding-box;
    padding: 88px 72px;
    min-height: 100vh;
    flex-wrap: wrap;

    &__header {
      padding-right: 24px;

      p.bold {
        height: fit-content;
        width: 100%;
        text-transform: uppercase;
        position: relative;
        font-family: SairaSemiCondensed, "Open Sans", sans-serif;

        &::after {
          position: absolute;
          height: 1px;
          width: calc(100% - 56px);
          background-color: $white;
          content: "";
          display: block;
          right: 0;
          top: 45%;
        }
      }
    }

    &__subheader {
      margin-top: 6px;

      h3 {
        color: $success;
      }
    }

    &__top {
      align-content: flex-start;
    }

    &__content {
      margin-top: 48px;
    }

    &__footer {
      justify-content: center;
      align-self: flex-end;
    }

    &__col {
      color: $dark-grey50;
      padding-left: 12px;
      padding-right: 12px;
      margin-top: 6px;
      flex-wrap: wrap;
      height: fit-content;

      &:last-of-type {
        padding-right: 0;
      }

      &--no-left-gutters {
        padding-left: 0;
      }

      ul {
        list-style: none;
        padding-left: 0;
        margin: 0;

        li {
          display: flex;
          margin-top: 24px;

          &:first-of-type {
            margin-top: 0;
          }
        }
      }

      p {
        color: $dark-grey50;
        margin-bottom: 24px;
        font-size: 16px;
        line-height: 20px;
        width: 100%;

        &.bold {
          color: $white;
          font-weight: bold;
          font-family: Karla, "OpenSans", sans-serif;
        }

        a {
          color: $white;
          font-weight: bold;
        }
      }

      &-perk-icon {
        margin-right: 8px;
      }

      .contact {
        display: flex;
        flex-wrap: wrap;

        .btn {
          width: 196px;

          a {
            display: flex;
            justify-content: space-around;
            width: 100%;
            align-items: center;
          }

          &:hover {
            & > a {
              color: $dark-grey;
            }

            svg {
              path {
                fill: black;
              }
            }
          }

          &:last-of-type {
            margin-top: 24px;
            margin-bottom: 24px;
          }
        }
      }
    }
  }

  .membership {
    background: transparent linear-gradient(233deg, #F3722D 0%, #C11CAE 100%) 0% 0% no-repeat padding-box;
    display: flex;
    flex-wrap: wrap;
    padding: 88px 72px;

    &__heading {
      text-transform: uppercase;
      position: relative;
      width: 100%;
      height: 20px;
      margin-right: 24px;

      &::after {
        position: absolute;
        height: 1px;
        width: calc(100% - 104px);
        background-color: $white;
        content: "";
        display: block;
        right: 0;
        top: 45%;
      }
    }

    &__content {
      flex-wrap: wrap;
    }

    &__description {
      margin-bottom: 40px;

      .bold {
        font-size: 16px;
        line-height: 20px;
      }
    }

    &__items-container {
      justify-content: space-between;
    }

    &__item {
      flex-wrap: wrap;

      &:first-of-type {
        padding-right: 12px;
      }

      &:last-of-type {
        padding-left: 12px;
      }

      &-img-container {
        border-top-left-radius: 10px;
        border-top-right-radius: 10px;
        background-color: #000;
        padding: 24px;
        padding-top: 0;
        width: 100%;
        min-height: 390px;
        text-align: center;

        .btn {
          width: 100%;
          margin-top: 24px;
        }

        img,
        video {
          width: 225px;
          height: 225px;

          &:hover {
            cursor: pointer;
          }
        }
      }

      &-minted {
        color: $dark-grey50;
        text-transform: uppercase;
      }

      &-address {
        font-family: KarlaBold, "Open Sans", sans-serif;
        font-weight: bold;

        .bold {
          font-family: KarlaBold, "Open Sans", sans-serif;
        }
      }

      h3,
      p {
        width: 100%;
      }

      ul {
        list-style: none;
        background-color: $white;
        border-bottom-left-radius: 10px;
        border-bottom-right-radius: 10px;
        padding: 24px;
        margin-top: 0;
        margin-bottom: 0;
        width: 100%;
        height: calc(100% - 390px);
        display: flex;
        flex-wrap: wrap;
        justify-content: flex-end;

        li {
          display: flex;
          align-items: flex-start;
          margin-bottom: 20px;
          width: 100%;
          font-size: 14px;
          line-height: 18px;

          p {
            color: $dark-grey;
            font-family: KarlaBold, "Open Sans", sans-serif;
          }

          &:last-of-type {
            margin-bottom: 0;
          }

          svg {
            margin-right: 8px;
          }
        }

        .btn {
          display: flex;
          align-self: flex-end;
          justify-self: flex-end;
          margin-top: 32px;
        }
      }
    }
  }
}

.schedule-list {
  padding-left: 0;
  list-style: none;

  &:last-of-type {
    margin-bottom: 0;
  }

  span,
  li,
  p,
  h2 {
    color: $dark-grey;
  }

  &__item {
    display: flex;
    align-items: center;
    margin-bottom: 10px;

    &:first-of-type {
      margin-top: 20px;
    }

    &:last-of-type {
      margin-bottom: 0;
    }

    &-description {
      box-shadow: 0 3px 5px #96989929;
      background-color: $white;
      border-radius: 5px;
      margin-left: 10px;
      padding: 10px;
      width: 420px;

      .orange {
        color: $orange;
      }

      .purple {
        color: $purple;
      }

      .grey {
        color: $dark-grey50;
        font-size: 14px;
      }

      .light-grey {
        color: $dark-grey25;
      }

      .bold {
        font-weight: bold;
        font-family: KarlaBold, "Open Sans", sans-serif;
        font-size: 16px;
        line-height: 20px;
      }
    }
  }
}

@media (max-width: 1039px) {
  .home-page {
    .carousel {
      &-slider {
        overflow: visible;
      }

      &-status {
        top: 100%;
        width: 100%;
        height: 87px;
        padding-left: calc(50% - 100px);
      }

      &-arrow {
        &-prev,
        &-next {
          bottom: -64px;
        }

        &-prev {
          left: calc(50% - 60px);
        }

        &-next {
          left: 50%;
        }
      }
    }

    .about {
      margin-top: 87px;

      &__col {
        p.bold {
          margin-top: 48px;
        }

        h3 {
          margin-top: 24px;
        }
      }

      .contact {
        width: 100%;
        flex-flow: column;

        &__email {
          display: flex;
          flex-wrap: wrap;
          justify-content: center;
        }

        .btn {
          margin: 0 auto;
        }
      }
    }
  }
}

@media (max-width: 1040px) {
  .home-page {
    .charity {
      &__mint {
        .input {
          &__field {
            height: 30px;
          }
        }

        & > div {
          flex-wrap: nowrap;

          .btn {
            margin-top: 0;
            padding-top: 5px;
            padding-bottom: 5px;
            height: 30px;
          }
        }
      }
    }

    .about {
      padding: 44px 36px;

      &__header {
        p {
          width: 100%;
        }
      }

      &__col {
        padding-left: 0;
        padding-right: 0;
      }
    }

    .membership {
      padding: 44px 36px;

      &__heading {
        width: 100%;
        margin-right: 0;
      }

      &__content {
        margin-top: 24px;
        width: 100%;
      }

      &__item {
        padding: 0;
        margin-top: 12px;

        &-img-container {
          height: 414px;
        }

        &:first-of-type {
          padding-right: 0;
        }

        &:last-of-type {
          margin-top: 48px;
          padding-left: 0;
        }
      }
    }
  }
}

